<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="54sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/food1"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_food1"
                android:textSize="40sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/food"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_food"
                android:textSize="40sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/bomb"
                tools:ignore="ContentDescription"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_bomb"
                android:textSize="40sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:layout_marginTop="60dp"
        android:onClick="startGame"/>

</LinearLayout>